Implement moving position UI of decisionBranches

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -28,3 +28,4 @@ html
   = javascript_include_tag 'app'
   = javascript_pack_tag 'application'
   = javascript_pack_tag 'conversation-tree'
+  = stylesheet_pack_tag 'conversation-tree'
