Update DemoBotsController#update and view

--- a/app/views/admin/demo_bots/index.html.slim
+++ b/app/views/admin/demo_bots/index.html.slim
@@ -1,6 +1,8 @@
 .container.pt-5
   .d-flex.justify-content-between
     h3 Demo Bots
+  .d-flex
+    = render 'shared/flash'
   table.table.mt-5
     thead
       tr
