Add User and Bot Test

--- a/app/views/admin/demo_bots/index.html.slim
+++ b/app/views/admin/demo_bots/index.html.slim
@@ -20,7 +20,7 @@
               = link_to bot.image_url do
                 .circle-image-56 style=css_bg_image(bot.image_url(:thumb))
           td= bot.name
-          td= link_to 'Finish demo', admin_demo_bot_path(bot), method: :patch, data: { confirm: 'デモを終了しますか？' }, class: 'btn btn-secondary'
+          td= link_to 'Finish demo', admin_demo_bot_term_path(bot), method: :delete, data: { confirm: 'デモを終了しますか？' }, class: 'btn btn-secondary'
           td
             - if bot.demo_finished_at.present?
               = "#{l bot.demo_finished_at, format: :long}にデモが終了しています"
